# models/user.go
@@ -258,6 +258,5 @@ type (
 	AnotherTrys struct {
 		ID       uint   `json:"id"`
 		Username string `json:"username"`
-		Password string `json:"password"`
 	}
 )
